# BMI203-HW1-FAST-AQ-Parser

./: pyproject.toml
.github/workflows/: ci.yml
seqparser/: seq.py
tests/: good.fa  good.fq  test_parsers.py  test_transcribe.py
