[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "seqparser"
authors = [{name = "Vishvak Subramanyam", email = "vishvak.subramanyam@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
	"python_version >= 3.9"
]

[project.urls]
Home = "https://github.com/Vishvak2000/BMI203-HW1-FAST-AQ-Parser"